--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -3,8 +3,10 @@
 @dark:					#333333;
 @firebrick:				#B22222;
 @green:					#008000;
+@grey:                  #757575;
+@crowdsound:            #2bbbad;
 @smarthphone-break:     768px;
 @art-width:             68vmin;
 @next-size:             20vmin;
 @musiclist-cover:       20vmin;
-@crowdsound:            #2bbbad;
+
