Refactoring and adding titles

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -94,12 +94,10 @@ a.disabled:hover {
   height: 20vmin;
   width: 20vmin;
   border-radius: 10vmin;
-  /* border: 1px solid #E0E0E0; */
-
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #E0E0E0;
+  background: #e0e0e0;
 }
 .control-button {
   color: #757575;
@@ -126,7 +124,7 @@ a.disabled:hover {
   flex-direction: row;
 }
 .music-list-entry + .music-list-entry {
-  border-top: 1px solid #E0E0E0;
+  border-top: 1px solid #e0e0e0;
 }
 .music-list-entry.active,
 .crowdsound-btn {
