--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -1,9 +1,9 @@
-@lightgray:				#E1E1E1;
 @white:					#FFFFFF;
 @dark:					#333333;
 @firebrick:				#B22222;
 @green:					#008000;
 @grey:                  #757575;
+@lightgrey:             #E0E0E0;
 @crowdsound:            #2bbbad;
 @smarthphone-break:     768px;
 @art-width:             68vmin;
