--- a/views/player/search.jade
+++ b/views/player/search.jade
@@ -8,7 +8,7 @@ block nav
 
 block content
     .container-fluid
-        form(method="POST", action="/search")(style="width:100%")
+        form(method="POST", action="/search")
             .form-group
                 input.form-control(type="text",name="search",placeholder="Search")
             button.crowdsound-btn.crowdsound-btn-block(type='submit', name='action')
