--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -108,12 +108,10 @@ a.disabled {
   height: @next-size;
   width: @next-size;
   border-radius: @next-size/2;
-  /* border: 1px solid #E0E0E0; */
   display: flex;
   align-items: center;
   justify-content: center;
-  // font-size: 6vmin;
-  background: #E0E0E0;
+  background: @lightgrey;
 }
 
 .control-button {
@@ -148,7 +146,7 @@ a.disabled {
 }
 
 .music-list-entry + .music-list-entry {
-    border-top: 1px solid #E0E0E0;
+    border-top: 1px solid @lightgrey;
 }
 
 .music-list-entry.active,
