Active queue hover

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -843,6 +843,9 @@ a.fill-div {
 .music-list-entry.active a {
   color: #fff;
 }
+.music-list-entry.active a:hover {
+  color: #000;
+}
 .music-list-art-image {
   max-width: 20vmin;
 }
