--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -874,6 +874,10 @@
     color: #fff;
 }
 
+.music-list-entry.active a:hover {
+    color: #000;
+}
+
 .music-list-art-image {
     max-width: @musiclist-cover;
 }
