Music List, spotify links on queue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -145,6 +145,9 @@ a.disabled:hover {
 .music-list-entry.active a {
   color: #fff;
 }
+.music-list-entry.active a:hover {
+  color: #000;
+}
 .music-list-art-image {
   max-width: 20vmin;
 }
