--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -114,6 +114,16 @@ a.disabled {
   background: @lightgrey;
 }
 
+.player-control-box {
+    margin-left: auto;
+    margin-right: auto;
+    height: 10vmin;
+    width: 10vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .control-button {
   color: @grey;
   &:not(.disabled) {
