--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -98,6 +98,8 @@ a.disabled {
   white-space: nowrap; /* forces text to single line */
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
+  white-space: nowrap;
 }
 
 .fg-1 {
