--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -215,6 +215,10 @@ a.disabled {
     min-width: 0;
 }
 
+.text-highlight {
+    color: @crowdsound;
+}
+
 .music-list-description div {
     text-overflow: ellipsis;
     white-space: nowrap;
